fix (css): fix horizontal scrolling on mobile

--- a/css/reset.css
+++ b/css/reset.css
@@ -7,3 +7,8 @@
 .nf {
     line-height: inherit;
 }
+
+html,
+body{
+    overflow-x: hidden;
+}
